cabal-version: 1.12

name:           prometheus-port
version:        0.2.0.0
description:    Please see the README on GitHub at <https://github.com/onramp/prometheus-port#readme>
build-type:     Simple

extra-source-files: README.md

library
  exposed-modules: Network.Wai.Middleware.Prometheus
                   Prometheus
                   Prometheus.GHC
                   Prometheus.Internal
                   Prometheus.Internal.Pure
                   Type.No

  other-modules: Prometheus.Internal.Base
                 Prometheus.Internal.Primitive
                 Prometheus.Internal.Pure.Base
                 Prometheus.Internal.Pure.Counter
                 Prometheus.Internal.Pure.Gauge
                 Prometheus.Internal.Pure.Histogram
                 Prometheus.Internal.Pure.Summary
                 Prometheus.Internal.Vector

  hs-source-dirs: src

  ghc-options: -O1

  build-depends: base
               , bytestring
               , containers
               , deepseq
               , http-types
               , stm
               , text
               , wai

  default-language: Haskell2010

test-suite consistency
  type: exitcode-stdio-1.0

  main-is: Main.hs

  hs-source-dirs: test/consistency

  ghc-options: -O1

  build-depends: base >=4.7 && <5
               , bytestring
               , hspec ==2.*
               , HUnit
               , prometheus-port

  default-language: Haskell2010
