cabal-version: 1.12

name:           prometheus-port
version:        0.2.1.0
description:    Please see the README on GitHub at <https://github.com/on-ramp/prometheus-port#readme>
build-type:     Simple

extra-source-files: README.md

library
  exposed-modules: Network.Wai.Middleware.Prometheus
                   Prometheus
                   Prometheus.GHC
                   Prometheus.Internal
                   Prometheus.Internal.Pure
                   Type.No

  other-modules: Prometheus.Internal.Base
                 Prometheus.Internal.Primitive
                 Prometheus.Internal.Pure.Base
                 Prometheus.Internal.Pure.Counter
                 Prometheus.Internal.Pure.Gauge
                 Prometheus.Internal.Pure.Histogram
                 Prometheus.Internal.Pure.Summary
                 Prometheus.Internal.Vector

  hs-source-dirs: src

  ghc-options:         -O2
                       -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
                       -Wno-name-shadowing
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock
                       -Wunicode-bidirectional-format-characters
                       -Werror=unicode-bidirectional-format-characters
  if impl(ghc >= 9.2)
    ghc-options:       -Wredundant-bang-patterns
                       -Woperator-whitespace
                       -Wimplicit-lift
  if impl(ghc >= 9.4)
    ghc-options:       -Wredundant-strictness-flags


  build-depends: base
               , bytestring
               , containers
               , deepseq
               , http-types
               , stm
               , wai

  default-language: Haskell2010

test-suite consistency
  type: exitcode-stdio-1.0

  main-is: Main.hs

  hs-source-dirs: test/consistency

  build-depends: base >=4.7 && <5
               , bytestring
               , hspec ==2.*
               , HUnit
               , prometheus-port

  default-language: Haskell2010

benchmark time
  type: exitcode-stdio-1.0

  main-is: Time.hs

  hs-source-dirs: benchmarks

  build-depends: base >=4.7 && <5
               , bytestring
               , deepseq
               , gauge
               , prometheus-port
               , random

  ghc-options: -O2
               -threaded
               -rtsopts
               -with-rtsopts=-N

  default-language: Haskell2010
